# northstar-quant

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init_core_tables.py  0002_add_positions_and_broker_sync.py  0003_add_order_semantic_to_order_records.py  0004_use_timezone_aware_datetimes.py  0005_add_position_snapshot_batch_id.py  (+9 more)
configs/: app.yaml
docs/: 01_架构总览.md  02_配置说明.md  03_模块设计说明.md  04_实盘执行现状与增强说明.md  05_限价执行_超时撤单_交易日历与Dashboard.md  06_限价单追价执行器.md  07_邮件发送日报_周报_月报.md  08_邮件附件PDF报告.md  09_正式版PDF报告版式.md
scripts/: run_demo.sh
templates/: daily_report.md.j2  monthly_report.md.j2  weekly_report.md.j2
tests/: test_account_attribution_repository.py  test_alerts.py  test_backtest_registry.py  test_cli_help.py  test_dashboard.py  test_data_download.py  test_data_overview.py  test_data_schema.py  test_email_sender.py  test_event_engine.py  test_execution_pricing.py  test_execution_registry.py  test_health.py  test_init_db.py  test_ledger_repository.py  test_live_attribution.py  test_live_attribution_cli.py  test_live_preflight.py  test_logging.py  test_multi_strategy.py  test_order_management.py  test_order_repository.py  test_order_router.py  test_paper_broker.py  test_position_repository.py  test_pretrade.py  test_profile_registry.py  test_rebalance.py  test_report_builder.py  test_scheduler.py  test_strategy_base.py  test_strategy_pipeline.py  test_trade_attribution_repository.py  test_trading_calendar.py  test_yfinance_provider.py
(+92 files in other folders)
